[gd_scene load_steps=2 format=3 uid="uid://du1ce84fu4a65"]

[ext_resource type="Script" path="res://src/Scenes/UI/PauseUI/pause_menu.gd" id="1_1lty3"]

[node name="PauseLayer" type="CanvasLayer"]
layer = 10
script = ExtResource("1_1lty3")

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 1

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -87.0
offset_right = 107.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "-= PAUSED =-"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Resume"

[node name="SettingsButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Settings"

[node name="LeaveButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Leave Lobby"

[node name="QuitGameButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Quit Game"
